src/np222kk/dv507/a2/test/cases/negative/test_duplicate_declaration_03.ofp
void main() {

}

void test(int i) {
    char i;
}